2000-05-29  OKUJI Yoshinori  <okuji@gnu.org>

	Based on a patch by Neal H Walfield <neal@walfield.org>:
	* netboot/misc.c [GRUB] (inet_aton): Defined.
	* netboot/main.c (arp_server_override): New function.
	* netboot/etherboot.h [GRUB] (arp_server_override): Declared.
	(inet_aton): Likewise.
	* stage2/builtins.c (tftpserver_func): New function.
	(builtin_tftpserver): New variable.
	(builtin_table): Added a pointer to BUILTIN_TFTPSERVER.
	
2000-05-28  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/asm.S (codestart): Fix a typo: DISKLESS_SUPPORT ->
	SUPPORT_DISKLESS.
	* stage2/nbloader.S: Fix the image length and the memory length
	fields. They shouldn't contain the first sector for a tag.
	Mmh..., that is unclear as far as I see the Net Boot Image
	Proposal...
	* stage2/shared.h (STACKOFF): Enclosed with parentheses.
	(PROTSTACKINIT): Likewise.
	
2000-05-27  OKUJI Yoshinori  <okuji@gnu.org>

	Add diskless support, mostly based on patches by Christoph
	Plattner <Christoph.Plattner@dot.at>, but also based on a patch
	by Chip Salzenberg <chip@valinux.com> for PXE. Of course, I've
	modified both the patches thoroughly to adapt them to my
	preference.

	* configure.in (--enable-diskless): New option. Set a
	conditional DISKLESS_SUPPORT.
	* stage2/Makefile.am (noinst_HEADERS): Added nbi.h.
	(EXTRA_PROGRAMS): New variable.
	(pkgdata_DATA) [DISKLESS_SUPPORT]: Added
	nbgrub and pxegrub.
	(noinst_DATA) [DISKLESS_SUPPORT]: Added nbloader, pxeloader and
	diskless.
	(noinst_PROGRAMS) [DISKLESS_SUPPORT]: Added nbloader.exec,
	pxeloader.exec and diskless.exec.
	(PXELOADER_LINK): New variable.
	(BUILT_SOURCES) [DISKLESS_SUPPORT]: Added diskless_size.h.
	(diskless_exec_SOURCES): New variable.
	(diskless_exec_CFLAGS): Likewise.
	(diskless_exec_LDFLAGS): Likewise.
	(diskless_exec_LDADD): Likewise.
	(diskless_size.h): New target.
	(nbloader_exec_SOURCES): New variable.
	(nbloader_exec_CFLAGS): Likewise.
	(nbloader_exec_LDFLAGS): Likewise.
	(nbloader_exec-nbloader.o): New dependency.