@@ -50,18 +50,19 @@ grub_error_t errnum = ERR_NONE;
 char *err_list[] =
 {
   [ERR_NONE] = 0,
+  [ERR_BAD_ARGUMENT] = "Invalid argument",
   [ERR_BAD_FILENAME] =
-  "Bad filename (must be absolute pathname or blocklist)",
+  "Filename must be either an absolute pathname or blocklist",
   [ERR_BAD_FILETYPE] = "Bad file or directory type",
   [ERR_BAD_GZIP_DATA] = "Bad or corrupt data while decompressing file",
-  [ERR_BAD_GZIP_HEADER] = "Bad or incompatible header on compressed file",
+  [ERR_BAD_GZIP_HEADER] = "Bad or incompatible header in compressed file",
   [ERR_BAD_PART_TABLE] = "Partition table invalid or corrupt",
-  [ERR_BAD_VERSION] = "Bad or corrupt version of stage1/stage2",
+  [ERR_BAD_VERSION] = "Mismatched or corrupt version of stage1/stage2",
   [ERR_BELOW_1MB] = "Loading below 1MB is not supported",
-  [ERR_BOOT_COMMAND] = "Cannot boot without kernel loaded",
+  [ERR_BOOT_COMMAND] = "Kernel must be loaded before booting",
   [ERR_BOOT_FAILURE] = "Unknown boot failure",
   [ERR_BOOT_FEATURES] = "Unsupported Multiboot features requested",
-  [ERR_DEV_FORMAT] = "Device string unrecognizable",
+  [ERR_DEV_FORMAT] = "Unrecognized device string",
   [ERR_DEV_VALUES] = "Invalid device requested",
   [ERR_EXEC_FORMAT] = "Invalid or unsupported executable format",
   [ERR_FILELENGTH] =
@@ -70,20 +71,19 @@ char *err_list[] =
   [ERR_FSYS_CORRUPT] = "Inconsistent filesystem structure",
   [ERR_FSYS_MOUNT] = "Cannot mount selected partition",
   [ERR_GEOM] = "Selected cylinder exceeds maximum supported by BIOS",
-  [ERR_NEED_LX_KERNEL] = "Must load Linux kernel before initrd",
-  [ERR_NEED_MB_KERNEL] = "Must load Multiboot kernel before modules",
+  [ERR_NEED_LX_KERNEL] = "Linux kernel must be loaded before initrd",
+  [ERR_NEED_MB_KERNEL] = "Multiboot kernel must be loaded before modules",
   [ERR_NO_DISK] = "Selected disk does not exist",
   [ERR_NO_PART] = "No such partition",
   [ERR_NUMBER_PARSING] = "Error while parsing number",
   [ERR_OUTSIDE_PART] = "Attempt to access block outside partition",
+  [ERR_PRIVILEGED] = "Must be authenticated",
   [ERR_READ] = "Disk read error",
   [ERR_SYMLINK_LOOP] = "Too many symbolic links",
+  [ERR_UNALIGNED] = "File is not sector aligned",
   [ERR_UNRECOGNIZED] = "Unrecognized command",
   [ERR_WONT_FIT] = "Selected item cannot fit into memory",
   [ERR_WRITE] = "Disk write error",
-  [ERR_BAD_ARGUMENT] = "Invaild argument specified",
-  [ERR_UNALIGNED] = "File is not sector aligned",
-  [ERR_PRIVILEGED] = "Must be authenticated",
 };
 
 
